crates/ruff_linter/src/rules/flake8_annotation_complexity/snapshots/ruff_linter__rules__flake8_annotation_complexity__tests__TAE002_yields_errors_TAE002.py.snap
---
source: crates/ruff_linter/src/rules/flake8_annotation_complexity/mod.rs
---
TAE002 Type annotation for `d` is too complex (4 > 3)
  --> TAE002.py:13:45
   |
11 | # Error
12 | def complex_argument(
13 |     a: list[dict[str | int, list[int]]], d: Annotated[dict[str, list[list[int] | str]], 'yes']
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 | ) -> list[int]: ...
   |

TAE002 Type annotation for `return type` is too complex (4 > 3)
  --> TAE002.py:18:31
   |
17 | # Error
18 | def complex_return(a: int) -> dict[str, list[dict[str, int | None]]]: ...
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 |
20 | # Error
   |

TAE002 Type annotation for `variable_with_complex_ann` is too complex (4 > 3)
  --> TAE002.py:21:28
   |
20 | # Error
21 | variable_with_complex_ann: dict[str, dict[str, dict[str, dict[str, str]]]] = {}
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 |
23 | def variable_with_complex_ann_in_fn() -> None:
   |

TAE002 Type annotation for `var` is too complex (4 > 3)
  --> TAE002.py:24:10
   |
23 | def variable_with_complex_ann_in_fn() -> None:
24 |     var: dict[str, dict[str, dict[str, dict[str, str]]]] = {}
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 |     print(var)
   |

TAE002 Type annotation for `bad_arg` is too complex (4 > 3)
  --> TAE002.py:29:33
   |
28 | class ClassWithComplexMemberFunction:
29 |     def __init__(self, bad_arg: dict[str, dict[str, dict[str, dict[str, str]]]]) -> None: ...
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
